Fri Apr 27 18:47:07 2001  Brian Gough  <bjg@network-theory.co.uk>

	* types.c (gsl_rng_types_setup): added void to make prototype
 	valid in ansi c

Mon Apr 16 20:03:07 2001  Brian Gough  <bjg@network-theory.co.uk>

	* default.c (gsl_rng_env_setup): removed spurious argument to
 	fprintf

Tue Jan 23 13:24:26 2001  Brian Gough  <bjg@network-theory.co.uk>

	* types.c (gsl_rng_types_setup): provide a function that returns a
 	list of all the generator types

	* default.c (gsl_rng_env_setup): get the list of generators from a
 	function rather than having a list in the code itself.  Display a
 	list of the valid generators if the user provides an incorrect one.

Fri Dec  8 20:30:58 2000  Brian Gough  <bjg@network-theory.co.uk>

	* ranlxs.c: renamed internal function ranlxs_set_impl to
 	ranlxs_set
	
	* ranlxd.c: renamed internal function ranlxd_set_impl to
 	ranlxd_set

	* ranlux.c: renamed internal function ranlux_set_impl to
 	ranlux_set

	* random.c: renamed internal function random_get_impl function to
 	random_get

Sat Jul 29 14:29:54 2000  Brian Gough  <bjg@network-theory.co.uk>

	* test.c (main): updated test value for MT19937 for new seeding
 	procedure

	* mt.c: The seeding procedure has been updated to match the 10/99
 	release of MT19937.

Wed Mar  8 16:04:34 2000  Brian Gough  <bjg@network-theory.co.uk>

	* rng.c (gsl_rng_memcpy): generators must now be of the same type
 	for a copy from one to the other to work.

Thu Feb 24 16:41:48 2000  Brian Gough  <bjg@network-theory.co.uk>

	* ran3.c (ran3_set): initialize unused zeroth element of state to
 	zero for consistency.

Mon Feb 14 13:28:26 2000  Brian Gough  <bjg@network-theory.co.uk>

	* made all internal functions static

Mon Dec  6 16:21:05 1999  Brian Gough  <bjg@network-theory.co.uk>

	* test.c (main): rewrote the tests to loop over all the generators

Wed Aug 11 20:57:10 1999  Brian Gough  <bjg@network-theory.co.uk>

	* ranlxd.c, ranlxs.c: added ranlxd and ranlxs, second generation